# mmmm

./: .env.example  .gitignore  MMMM.slnx  compose.yaml  pyproject.toml
.github/workflows/: pytest.yml
app/: main.py
app/api/: __init__.py  deps.py  router.py
app/api/endpoints/system/: monitor.py
app/api/endpoints/webhooks/: __init__.py  zalo.py  zalo_webhook.py
app/api/system/: monitor.py
app/api/v1/endpoints/: orders.py
app/core/: config.py
app/schemas/webhooks/: zalo_schema.py
src/Mmmm.Api/: Dockerfile  Mmmm.Api.csproj  Mmmm.Api.http  Program.cs  WeatherForecast.cs
src/Mmmm.Api/Controllers/: WeatherForecastController.cs
src/Mmmm.Api/Properties/: launchSettings.json
tests/: test_dummy.py  test_zalo_webhook.py
tests/webhooks/zalo/: conftest.py  test_signature.py
